[package]
name = "ads"
version = "0.4.3"
edition = "2021"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
license = "MIT/Apache-2.0"
description = "Client for the Beckhoff Automation Device Specification protocol for PLCs"
repository = "https://github.com/birkenfeld/ads-rs"
keywords = ["Beckhoff", "ADS", "automation", "device", "PLC"]

[dependencies]
byteorder = "1.5.0"
crossbeam-channel = "0.5.8"
itertools = "0.12.0"
thiserror = "1.0.50"
zerocopy = { version = "0.7.30", features = ["derive"] }

[dev-dependencies]
once_cell = "1.19.0"
parse_int = "0.6.0"
quick-xml = "0.31.0"
regex = "1.10.2"
structopt = "0.3.26"
strum = { version = "0.26.1", features = ["derive"] }
time = { version = "0.3.34", features = ["formatting"] }
