[package]
name = "ads"
version = "0.4.3"
edition = "2018"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
license = "MIT/Apache-2.0"
description = "Client for the Beckhoff Automation Device Specification protocol for PLCs"
repository = "https://github.com/birkenfeld/ads-rs"
keywords = ["Beckhoff", "ADS", "automation", "device", "PLC"]

[dependencies]
byteorder = "1.5.0"
crossbeam-channel = "0.5.13"
itertools = "0.13.0"
thiserror = "1.0.63"
zerocopy = { version = "0.7.35", features = ["derive"] }

[dev-dependencies]
once_cell = "1.19.0"
parse_int = "0.6.0"
quick-xml = "0.36.1"
regex = "<1.10.0"
clap = { version = "3.2.25", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
time = { version = "<0.3.18", features = ["formatting"] }
