[package]
name = "ads"
version = "0.5.0"
edition = "2018"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
license = "MIT/Apache-2.0"
description = "Client for the Beckhoff Automation Device Specification protocol for PLCs"
repository = "https://github.com/birkenfeld/ads-rs"
keywords = ["Beckhoff", "ADS", "automation", "device", "PLC"]
rust-version = "1.71"

[dependencies]
byteorder = "1.5.0"
crossbeam-channel = "0.5.13"
itertools = "0.13.0"
oneshot = { version = "0.1.11", default-features = false, features = ["std"] }
thiserror = "2.0"
zerocopy = { version = "0.8.9", features = ["derive"] }

[dev-dependencies]
once_cell = "~1.20.2"
parse_int = "0.6.0"
quick-xml = "0.37.0"
regex = "<1.10.0"
chrono = "0.4.38"
clap = { version = "3.2.25", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }

# MSRV
textwrap = "=0.16.0"
unicode-width = "=0.1.13"
